# claudeboard

./: .pre-commit-config.yaml  README.md  claudeboard.py  pyproject.toml
.github/workflows/: ci.yml
src/claudeboard/: __init__.py  __main__.py  cli.py  detail.py  focus.py  git.py  page.py  server.py  sessions.py  spend.py  summary.py
src/claudeboard/static/: index.html
tests/: conftest.py  test_detail.py  test_git.py  test_sessions.py  test_spend.py  test_status_warnings.py
